--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "devDependencies": {},
     "type": "module",
     "scripts": {
-        "start": "node --experimental-modules start.js"
+        "start": "node --experimental-modules start.js",
+        "test": "node --experimental-modules test.js"
     }
 }
