--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
         "mpc-js": "^1.2.1",
         "naudiodon": "^2.1.2",
         "node-fetch": "^2.6.0",
+        "pv-porcupine": "../pv-porcupine/",
         "snowboy": "^1.3.1",
         "sox-audio": "^0.3.0",
         "stream-buffers": "^3.0.2",
