--- a/package.json
+++ b/package.json
@@ -22,12 +22,14 @@
         "sox-audio": "^0.3.0",
         "stream-buffers": "^3.0.2",
         "words-to-numbers": "^1.5.1",
-        "written-number": "^0.9.1"
+        "written-number": "^0.9.1",
+        "ws": "^7.2.3"
     },
     "devDependencies": {},
     "type": "module",
     "scripts": {
         "start": "node --experimental-modules start.js",
+        "webserver": "node --experimental-modules client/websocket-server/websocket-server.js",
         "test": "node --experimental-modules test.js"
     }
 }
