--- a/package.json
+++ b/package.json
@@ -23,7 +23,8 @@
         "stream-buffers": "^3.0.2",
         "words-to-numbers": "^1.5.1",
         "written-number": "^0.9.1",
-        "ws": "^7.2.3"
+        "ws": "^7.2.3",
+        "ws-wrapper": "^2.0.2"
     },
     "devDependencies": {},
     "type": "module",
