--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
         "argparse": "^1.0.10",
         "deepspeech": "^0.6.1",
         "didyoumean2": "^4.0.0",
+        "express": "^4.17.1",
         "mpc-js": "^1.2.1",
         "naudiodon": "^2.1.2",
         "node-fetch": "^2.6.0",
@@ -30,6 +31,7 @@
     "type": "module",
     "scripts": {
         "start": "node --experimental-modules client/local/start.js",
+        "webserver": "node --experimental-modules client/webserver/webserver.js",
         "websocket": "node --experimental-modules client/websocket-server/websocket-server.js",
         "test": "node --experimental-modules test.js"
     }
