--- a/package.json
+++ b/package.json
@@ -12,14 +12,15 @@
     },
     "dependencies": {
         "argparse": "^1.0.10",
+        "bumblebee-hotword-node": "^0.0.4",
         "deepspeech": "^0.6.1",
         "didyoumean2": "^4.0.0",
         "express": "^4.17.1",
+        "jaxcore": "^0.0.2",
         "mpc-js": "^1.2.1",
         "naudiodon": "^2.1.2",
         "node-fetch": "^2.6.0",
         "pv-porcupine": "../pv-porcupine/",
-        "snowboy": "^1.3.1",
         "sox-audio": "^0.3.0",
         "stream-buffers": "^3.0.2",
         "words-to-numbers": "^1.5.1",
