--- a/package.json
+++ b/package.json
@@ -17,7 +17,7 @@
         "didyoumean2": "^4.0.0",
         "express": "^4.17.1",
         "mpc-js": "^1.2.1",
-        "mpg123": "^0.2.3",
+        "mpg123": "https://github.com/benbucksch/mpg123",
         "naudiodon": "^2.1.2",
         "node-fetch": "^2.6.0",
         "node-hue-api": "^4.0.6",
