--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
         "express": "^4.17.1",
         "mpc-js": "^1.2.1",
         "mpg123": "https://github.com/benbucksch/mpg123",
+        "mpg321": "^0.1.5",
         "naudiodon": "^2.1.2",
         "node-fetch": "^2.6.0",
         "node-hue-api": "^4.0.6",
