--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
         "sox-stream": "^2.0.3",
         "speaker": "^0.5.1",
         "stream-buffers": "^3.0.2",
+        "sugar-date": "^2.0.6",
         "words-to-numbers": "^1.5.1",
         "written-number": "^0.9.1",
         "ws": "^7.2.3",
