--- a/package.json
+++ b/package.json
@@ -15,9 +15,11 @@
         "@nano-sql/plugin-fuzzy-search": "^2.0.2",
         "argparse": "^1.0.10",
         "bumblebee-hotword-node": "^0.0.5",
+        "dav": "^1.8.0",
         "deepspeech": "^0.6.1",
         "didyoumean2": "^4.0.0",
         "express": "^4.17.1",
+        "ical": "^0.8.0",
         "mpc-js": "^1.2.1",
         "mpg123": "https://github.com/benbucksch/mpg123",
         "mpg321": "^0.1.5",
