Hue: Setup works

--- a/config-defaults.json
+++ b/config-defaults.json
@@ -8,6 +8,10 @@
     "username": null,
     "password": null
   },
+  "hue": {
+    "hostname": null,
+    "auth": null
+  },
   "audio": {
     "maxCommandLength": 10
   },
