--- a/config-help.json
+++ b/config-help.json
@@ -9,6 +9,10 @@
     "username": "Your username on the CalDAV/NextCloud/ownCloud server",
     "password": "Your password"
   },
+  "hue": {
+    "hostname": "The IP address or hostname of your Hue Bridge on your local network",
+    "auth": "The authentication credential to your Hue Bridge. This is effectively a password."
+  },
   "audio": {
     "maxCommandLength": "Finish the voice command after N seconds, e.g. when there is too much noise.",
     "inputDevice": "ALSA ID of the microphone audio device, e.g. hw(2,1), for 1. card 2. device. See aplay -l for a list. Empty = default device.",
