--- a/package.json
+++ b/package.json
@@ -25,7 +25,7 @@
         "mpg321": "^0.1.5",
         "naudiodon": "^2.1.2",
         "node-fetch": "^2.6.0",
-        "node-hue-api": "^4.0.6",
+        "node-hue-api": "https://github.com/benbucksch/node-hue-api",
         "node-vad": "^1.1.4",
         "r2": "^2.0.1",
         "sox-audio": "^0.3.0",
