DeepSpeech model in data/

--- a/config-defaults.json
+++ b/config-defaults.json
@@ -16,7 +16,7 @@
     "maxCommandLength": 10
   },
   "deepSpeech": {
-    "modelDir": "./model/",
+    "modelDir": "./data/deepspeech-0.6.1-models/",
     "model": "",
     "lm": "",
     "trie": "",
