Location: Reduce cities based on user location and city size

--- a/config-defaults.json
+++ b/config-defaults.json
@@ -12,6 +12,9 @@
     "hostname": null,
     "auth": null
   },
+  "homeLocation": {
+    "city": null
+  },
   "audio": {
     "maxCommandLength": 10
   },
