--- a/config-min.json
+++ b/config-min.json
@@ -1,5 +1,10 @@
 {
   "language": "en",
+  "homeLocation": {
+    "city": "Wiesbaden",
+    "lat": 50.06,
+    "lon": 8.245
+  },
   "maryTTS": {
     "voice": "cmu-slt"
   }
