--- a/config-help.json
+++ b/config-help.json
@@ -20,8 +20,8 @@
   },
   "audio": {
     "maxCommandLength": "Finish the voice command after N seconds, e.g. when there is too much noise.",
-    "inputDevice": "ALSA ID of the microphone audio device, e.g. hw(2,1), for 1. card 2. device. See aplay -l for a list. Empty = default device.",
-    "outputDevice": "ALSA ID of the speaker audio device, e.g. hw(1,0). Empty = default device."
+    "inputDevice": "ALSA ID of the microphone audio device, e.g. hw:2,1 , for 1. card 2. device. See aplay -l for a list. Empty = default device.",
+    "outputDevice": "ALSA ID of the speaker audio device, e.g. hw:1,0 . Empty = default device."
   },
   "deepSpeech": {
     "modelDir": "DeepSpeech Model directory. Convenience parameter to specify model, lm and trie at the same time.",
