--- a/package.json
+++ b/package.json
@@ -21,10 +21,10 @@
         "ical": "^0.8.0",
         "iso-639-1": "^2.1.3",
         "js-chess-engine": "^0.3.0",
+        "mic": "^2.1.2",
         "mpc-js": "^1.2.1",
         "mpg123": "https://github.com/benbucksch/mpg123",
         "mpg321": "^0.1.5",
-        "naudiodon": "^2.1.2",
         "node-fetch": "^2.6.0",
         "node-hue-api": "https://github.com/benbucksch/node-hue-api",
         "node-vad": "^1.1.4",
