--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
         "express": "^4.17.1",
         "ical": "^0.8.0",
         "iso-639-1": "^2.1.3",
+        "js-chess-engine": "^0.3.0",
         "mpc-js": "^1.2.1",
         "mpg123": "https://github.com/benbucksch/mpg123",
         "mpg321": "^0.1.5",
