Select speech engines in config file

--- a/config-defaults.json
+++ b/config-defaults.json
@@ -18,6 +18,11 @@
   "audio": {
     "maxCommandLength": 10
   },
+  "speechEngine": {
+    "wake": "bumblebee",
+    "speechRecognition": "deepSpeech",
+    "tts": "mozilla"
+  },
   "deepSpeech": {
     "modelDir": "./data/deepspeech-%version%-models/",
     "model": null,
