--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
         "node-hue-api": "https://github.com/benbucksch/node-hue-api",
         "node-vad": "^1.1.4",
         "r2": "^2.0.1",
+        "snowboy": "^1.3.1",
         "speaker": "^0.5.1",
         "stream-buffers": "^3.0.2",
         "sugar-date": "^2.0.6",
