Snowboy: Update to master

--- a/config-defaults.json
+++ b/config-defaults.json
@@ -28,6 +28,9 @@
     "model": null,
     "scorer": null
   },
+  "snowboy": {
+    "hotword": "computer"
+  },
   "maryTTS": {
     "url": "http://localhost:59125",
     "voice": "cmu-rms"
