Use deepSpeech for wake word

--- a/config-defaults.json
+++ b/config-defaults.json
@@ -19,7 +19,7 @@
     "maxCommandLength": 10
   },
   "speechEngine": {
-    "wake": "bumblebee",
+    "wake": "deepSpeech",
     "speechRecognition": "deepSpeech",
     "tts": "mozilla"
   },
