--- a/package.json
+++ b/package.json
@@ -35,7 +35,8 @@
         "words-to-numbers": "^1.5.1",
         "written-number": "^0.9.1",
         "ws": "^7.3.0",
-        "ws-wrapper": "^2.0.2"
+        "ws-wrapper": "^2.0.2",
+        "xmldom": "^0.6.0"
     },
     "devDependencies": {},
     "type": "module",
