Allow UI to listen to interpreted voice commands (context changes)

--- a/config-defaults.json
+++ b/config-defaults.json
@@ -1,5 +1,10 @@
 {
   "language": "en",
+  "core": {
+    "httpPort": 12777,
+    "webSocketPort": 12778,
+    "contextWebSocketPort": 12779
+  },
   "mpd": {
     "server": "localhost"
   },
