Add Recipe voice app

--- a/package.json
+++ b/package.json
@@ -14,7 +14,9 @@
         "@nano-sql/core": "^2.3.7",
         "@nano-sql/plugin-fuzzy-search": "^2.0.2",
         "argparse": "^1.0.10",
+        "axios": "^1.4.0",
         "bumblebee-hotword-node": "^0.0.6",
+        "csvtojson": "^2.0.10",
         "dav": "^1.8.0",
         "deepspeech": "^0.9.3",
         "express": "^4.17.1",
@@ -32,6 +34,7 @@
         "speaker": "^0.5.1",
         "stream-buffers": "^3.0.2",
         "sugar-date": "^2.0.6",
+        "svelte-collections": "^1.1.16",
         "words-to-numbers": "^1.5.1",
         "written-number": "^0.9.1",
         "ws": "^7.3.0",
